src/index.css
@import url("https://fonts.googleapis.com/css2?family=Irish+Grover&family=Outfit:wght@100..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  font-family: "Outfit", sans-serif;
  box-sizing: border-box;
  text-decoration: none;
  color: black;
  font-weight: var(--font-regular);
}

body,
html {
  height: 100vh;
  width: 100%;
  max-width: 100vw;
  scroll-behavior: smooth;
  background-color: #141416;
}

body {
  overflow-x: hidden;
  max-width: 100vw;
}

h1 {
  font-size: 60px;
  color: aliceblue;
  font-weight: 600;
  line-height: 50px;
  text-overflow: ellipsis;
  white-space: wrap;
  cursor: default;
}

h1 span {
  display: inline-block;
  cursor: default;
  font-size: 60px;
  color: aliceblue;
  font-weight: 600;
  line-height: 50px;
  text-overflow: ellipsis;
  white-space: wrap;
  transition:
    color 0.3s ease,
    text-shadow 0.3s ease;
}

h1 span:hover {
  color: var(--color-aqua);
  text-shadow: var(--neon-aqua);
}

::-webkit-scrollbar {
  display: none;
}

